# bootstrapper-og

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
_model/: _misc.py  bootstrapper_charts.py  commodity_options.py  economics.py  financing.py  gx_prices.py  hedging.py  lookup.py  main.py  market.py  model_control.py  model_drivers.py  model_inputs.py  permianco.py  prices.py  production_engine.py  return_functions.py  rolling_nav.py  run_financing_only.py  run_model.py  scheduler.py  type_curves.py  useful_functions.py  wgx_prices.py
_model/price_analysis/: price_analysis.py
_model_input/: Module1.bas  TCR - ParentCoMCSv1.0 - INPUT.xlsm  macro-code.txt
_model_input/_csv_drivers/: Sheet3.csv  asset_level_drivers.csv  current_afes.csv  current_hedges.csv  dnc_capex_drivers.csv  fees_schedule.csv  hist_financials_0.csv  hist_financials_1.csv  hist_financials_10.csv  hist_financials_2.csv  hist_financials_3.csv  hist_financials_4.csv  hist_financials_5.csv  hist_financials_6.csv  hist_financials_7.csv  hist_financials_8.csv  hist_financials_9.csv  live_ds.csv  monthly_drivers_0.csv  monthly_drivers_1.csv  monthly_drivers_10.csv  monthly_drivers_2.csv  monthly_drivers_3.csv  monthly_drivers_4.csv  monthly_drivers_5.csv  monthly_drivers_6.csv  monthly_drivers_7.csv  monthly_drivers_8.csv  monthly_drivers_9.csv  old_hedges.csv  opex_drivers_monthly.csv  production_splitter.csv  rig_crew_timing.csv  type_curves_gas.csv  type_curves_oil.csv  type_curves_water.csv
_model_v1/: bootstrapper_charts.py  commodity_options.py  economics.py  financing.py  gx_prices.py  hedging.py  lookup.py  main.py  market.py  model_control.py  model_drivers.py  model_inputs.py  permianco.py  prices.py  prices_NEW.py  production_engine.py  rolling_nav.py  run_financing_only.py  run_model.py  scheduler.py  type_curves.py
_model_v1.0/: commodity_options.py  financing.py  market.py  model_drivers.py  model_inputs.py  permianco.py  prices.py  prices_NEW.py  production_engine.py  rolling_nav.py  run_financing_only.py  run_model.py  scheduler.py
_model_v2/: __init__.py  model_control.py  price_update.py  rolling_nav.py  run_model.py  scratch.py  type_curves.py
bootstrapper/: __init__.py  cli.py
bootstrapper/app/: streamlit_app.py
bootstrapper/app/views/: compare.py  run_browser.py
bootstrapper/config/: __init__.py  grids.py
bootstrapper/core/: __init__.py  chunking.py  embeddings.py  indices.py  labeling.py  metrics.py  retrievers.py  run.py  search.py  snapshot.py  sweep.py
bootstrapper/datasets/: __init__.py  base.py  financebench.py  folder.py
bootstrapper/service/: __init__.py  app.py  local.py
model_v1/: bootstrapper_charts.py  economics.py  gx_prices.py  hedging.py  main.py  prices.py  type_curves.py
model_v2/: __init__.py
runs/run-20260619041438/: metrics.parquet
tests/: test_chunking.py  test_embeddings.py  test_folder.py  test_indices.py  test_labeling.py  test_metrics.py  test_search.py  test_snapshot.py  test_sweep_smoke.py
web/: README.md  app.js  index.html  search.html  search.js  styles.css
web/data/: run-20260619041438.json  run-20260619041438.metrics.json  runs.json
zzscratches/: daily_price_update.py  random_scratch.py
